# d2_itemsorter_rust

./: .pre-commit-config.yaml  Aleeria.d2x  Cargo.toml  README.md  config.toml  small_stash.sss
data/items/: belts.csv  items.csv  souls.csv  stack-weapons.csv  stack.csv  weapons-indestructible.csv  weapons.csv
examples/: Aleeria.d2s  Cheetoz.d2s  CraftedD2R.d2s  LaCope2.d2s  LaCopeFull.d2s  LaCopperfield.d2s  NewCheetoz.d2s  PlasticSurgeon.d2s  StartingD2R.d2s  StartingD2R.ma0  StartingD2R.map  small_stash.sss
old_tui/: Cargo.toml
old_tui/src/window/: framed.rs  items.rs  player.rs  stats.rs
src/: bitsy.rs  constants.rs  item.rs  lib.rs  main.rs  page.rs  player.rs  quality.rs  stash.rs
src/bitsy/: context.rs  error.rs  huffman.rs  impls.rs  macros.rs  mod.rs  old.rs  reader.rs  result.rs  writer.rs
src/bitsy/structs/: bits.rs  bytes.rs  chars.rs  int.rs  mod.rs  option.rs
src/item/: info.rs  mod.rs  pager.rs  properties.rs  reader.rs
tui/: Cargo.toml
tui/src/: main.rs
tui/src/views/: items.rs  mod.rs  player.rs  stats.rs
