[package]
name = "d2_itemsorter"
version = "0.1.0"
authors = ["Ignacio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-array = "0.4.4"
bit-vec = "0.6.3"
bitvec = "0.22.3"
bitvec-rs = "0.2.0"
clap = { version = "4.5.16", features = ["derive"] }
csv = "1.1.6"

[lints.clippy]
option_map_unit_fn = "allow"
