[package]
name = "d2_itemsorter"
version = "0.1.0"
authors = ["Ignacio"]
edition = "2018"

# [lib]
# proc-macro = true

[dependencies]
bit-array = "0.4.4"
bit-vec = "0.6.3"
bitvec = "0.22.3"
bitvec-rs = "0.2.0"
csv = "1.1.6"
lazy_static = "1.5.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
